# local-translate

./: .gitignore  BUILD_README.md  CLAUDE.md  IMPROVEMENT_PLAN.md  LocalTranslate.spec  README.md  SPEC.md  build.sh  notebook.ipynb  pyproject.toml  pytest.ini
.github/workflows/: release.yml  tests.yml
.specify/memory/: constitution.md
specs/001-deepl-translation-app/: plan.md  spec.md  tasks.md
specs/001-deepl-translation-app/checklists/: requirements.md
specs/002-translation-history/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-translation-history/checklists/: requirements.md
specs/002-translation-history/contracts/: history-api.md
specs/003-about-update-menu/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-about-update-menu/checklists/: requirements.md
src/: __init__.py  main.py
src/core/: config.py  error_handler.py  history_store.py  language_detector.py  model_manager.py  preferences.py  translator.py  update_checker.py
src/macos_platform/: __init__.py
src/ui/: about_dialog.py  history_item.py  history_panel.py  language_selector.py  main_window.py  splash_screen.py  styles.py  update_dialog.py
src/utils/: async_helpers.py  logger.py  version.py
tests/: conftest.py
tests/fixtures/: translation_data.py
tests/unit/: test_about_dialog.py  test_config.py  test_history_store.py  test_language_detector.py  test_model_manager.py  test_translator.py  test_update_checker.py  test_update_dialog.py  test_version.py
