[project]
name = "local-translate"
version = "0.2.0"
description = "Local translation application using Yanolja NEXT Rosetta-4B model with PySide6 GUI"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "LocalTranslate Contributors" }
]

dependencies = [
    # UI Framework
    "PySide6>=6.5.0",
    # ML Framework
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
    "optimum-quanto>=0.1.0",
    # Language Detection
    "lingua-language-detector>=2.0.0",
    # Testing
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "pytest-benchmark[histogram]>=4.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    # Code Quality
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    # Type Stubs
    "types-requests",
    # Packaging
    "pyinstaller>=6.17.0",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "ipykernel",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"

select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "transformers.*",
    "accelerate.*",
    "optimum.*",
    "lingua.*",
    "pytest_benchmark.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

# Benchmark configuration
benchmark_min_rounds = 5
benchmark_max_time = 10.0
benchmark_warmup = true
benchmark_warmup_iterations = 2
benchmark_disable_gc = true
benchmark_sort = "mean"
benchmark_storage = "file://.benchmarks"
benchmark_autosave = true
benchmark_save_data = true
benchmark_compare_fail = "mean:10%"
benchmark_group_by = "group,param,name"

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "performance: marks tests as performance benchmarks",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
